--- a/app/src/main/res/layout/rewards_item_group_layout.xml
+++ b/app/src/main/res/layout/rewards_item_group_layout.xml
@@ -3,27 +3,27 @@
 
     <data>
         <variable
-            name="item"
-            type="com.example.fetchrewards.model.FetchRewardsModel" />
+            name="listId"
+            type="int" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="8dp">
 
         <TextView
-            android:id="@+id/item_name"
+            android:id="@+id/group_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="@{item.name}" />
+            android:text='@{"List ID: " + listId}'
+            android:textStyle="bold"
+            android:paddingBottom="8dp" />
 
-        <TextView
-            android:id="@+id/item_id"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/group_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text='@{"ID: " + item.id}'/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </layout>
