--- a/app/src/main/res/layout/rewards_item_layout.xml
+++ b/app/src/main/res/layout/rewards_item_layout.xml
@@ -2,28 +2,29 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
+
         <variable
             name="item"
             type="com.example.fetchrewards.model.FetchRewardsModel" />
     </data>
 
-    <LinearLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:padding="8dp">
 
         <TextView
             android:id="@+id/item_name"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:layout_weight="1"
             android:text="@{item.name}" />
 
         <TextView
             android:id="@+id/item_id"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text='@{"ID: " + item.id}'/>
-    </LinearLayout>
+            android:layout_weight="1"
+            android:text='@{"ID: " + item.id}' />
+    </TableRow>
 </layout>
