--- a/app/src/main/res/layout/rewards_item_layout.xml
+++ b/app/src/main/res/layout/rewards_item_layout.xml
@@ -10,14 +10,15 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/item_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/table_border"
+            android:paddingStart="4dp"
             android:text="@{item.name}" />
 
         <TextView
@@ -25,6 +26,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/table_border"
+            android:paddingStart="4dp"
             android:text='@{"ID: " + item.id}' />
     </TableRow>
 </layout>
